# dl-compiler

./: .gitignore  README.md  pyproject.toml
src/dl/: __main__.py
src/dl/codegen/: live_range.py  reg_alloc.py  x64_codegen.py
src/dl/inter/: ic.py  instr.py  operand.py  operator.py
src/dl/lex/: lexer.py  tag.py
src/dl/semantic/: checker.py  type.py
src/dl/syntax/: parser.py
src/dl/tree/: ast.py  nodes.py  visitor.py
src/dlc/: __main__.py
src/dlc/codegen/: codegen_x64.py  interference_graph.py  live_analysis.py  live_range.py  x64_codegen.py
src/dlc/inter/: basic_block.py  ic.py  instr.py  interpreter.py  ir.py  operand.py  operator.py  phi_instr.py  ssa.py  ssa_operand.py  ssa_opt.py
src/dlc/inter_ssa/: sccp.py  ssa.py  ssa_ic.py  ssa_instr.py  ssa_interference_graph.py  ssa_live_analysis.py  ssa_operand.py  ssa_operator.py  ssa_opt.py  ssa_reg_alloc.py  ssa_x64_codegen.py
src/dlc/lex/: lexemes.py  lexer.py  tag.py  token.py  trie.py
src/dlc/opt/: global_opt.py
src/dlc/semantic/: checker.py  env.py  type.py
src/dlc/syntax/: parser.py
src/dlc/tree/: ast.py  nodes.py  visitor.py
tests/: test_lexer.py
tests/inputs/: phi_enquanto.dl  phi_se.dl  primo.dl  prog.dl
