[project]
name = "dlc"
version = "0.1.0"
description = "Compilador da linguagem DL"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "colorama>=0.4.6",
    "graphviz>=0.21",
    "pytest>=9.0.2",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"


[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # imports
    "D",    # docstrings
    "ANN",  # type hints
    "UP",   # modern python
    "B",    # bugbear
    "SIM",  # simplifications
    "C4",   # comprehensions
]